<resources>

    <string name="app_name">10117206 - Tugas UTS AKB</string>

    <string name="navigation_drawer_open">Open Nav Drawer</string>
    <string name="navigation_drawer_close">Close Nav Drawer</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_contact">Home</string>
    <string name="fragment_profile">Home</string>

    <string name="nim">10117206</string>
    <string name="nama">Zulfan Nurrahman</string>
    <string name="kelas">Informatika 7</string>
    <string name="univ">Universitas Komputer Indonesia</string>
    <string name="separator">~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~</string>
    <string name="deskripsi">Saya merupakan mahasiswa dari Universitas Komputer Indonesia yang berada pada bidang Teknik Informatika.</string>
    <string name="hobi">Hobi saya rebahan, karena sewaktu kecil saya terlalu banyak gerak.</string>

    <string name="whatsapp">(+62) 8122-2179-661</string>
    <string name="email">zulfann2299@gmail.com</string>
    <string name="fb">Zulfan Nurrahman</string>
    <string name="line">zulfann22</string>
    <string name="insta">zulfann22</string>
    <string name="twitter">zulfann22</string>

    <string name="menu_profile">My Profile</string>
    <string name="menu_contact">Contact Me</string>
    <string name="menu_friends">Friend List</string>
    <string name="add_friend">Add Friend</string>

</resources>